Upgrade project to use `Spring Framework 6.0.x`, `Java 21` using openrewrite.